--- a/src/components/header.css
+++ b/src/components/header.css
@@ -14,7 +14,7 @@
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-color: #000;
+    background-color: #00000073;
     z-index: -1;
 }
 
@@ -144,7 +144,7 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    padding: 15px 18px;
+    padding: 19px 18px;
 	margin:2px 2px;
     margin-bottom: 0;
     font-size: 12px;
@@ -166,7 +166,7 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    padding: 15px 18px;
+    padding: 19px 18px;
 	margin: 32px 2px;
     margin-bottom: 0;
     font-size: 12px;
