--- a/src/components/FeaturedResturants/FeaturedResturants.css
+++ b/src/components/FeaturedResturants/FeaturedResturants.css
@@ -4,14 +4,17 @@
 	margin-top:77px;
 }
 .featured-restaurants .bg-resto{
-	border-top:1px solid #e1e1e1;
+	/* border-top:1px solid #e1e1e1;
 	border-left: 1px solid #e1e1e1;
-    border-right: 1px solid #e1e1e1;
+    border-right: 1px solid #e1e1e1; */
 	margin-top:50px;
+	border-radius: 12px;
+	overflow: hidden;
+	box-shadow: 0 0 40px 0 #5e5c9a0f;
 }
 
 .bg-resto .resto-item{
-	border-bottom:1px solid #e1e1e1;
+	/* border-bottom:1px solid #e1e1e1; */
 	padding:15px 15px;
 }
 .bg-resto .resto-img {
@@ -23,18 +26,16 @@
 }
 .bg-resto .resto-img .resto-name h4 a{
 	font-size:16px;
-	color:#000;
-	font-weight:500;
+	font-weight:600;
 	text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
 }
-.bg-resto .resto-img .resto-name h4 a:hover{
+/* .bg-resto .resto-img .resto-name h4 a:hover{
 	color:#ffa803;
-}
+} */
 .bg-resto .resto-img .resto-name p{
 	font-size:14px;
-	color:#847577;
 	font-weight:400;
 }
 .resto-item .resto-location {
@@ -59,7 +60,7 @@
 }
 
 .bg-resto .treading-item {
-    border-bottom: 1px solid #e1e1e1;
+    /* border-bottom: 1px solid #e1e1e1; */
     padding: 15px 15px;
 }
 .bg-resto .treading-item .resto-img {
