--- a/src/components/OfferBanners/OfferBanners.css
+++ b/src/components/OfferBanners/OfferBanners.css
@@ -5,6 +5,7 @@
 .offer-banners .banner {
 	margin-top:30px;
 	position:relative;
+  box-shadow: 0 0 40px 0 #5e5c9a0f;
 }
 .banner .offr-bnnr-img {
 	position:relative;
