--- a/src/responsive.css
+++ b/src/responsive.css
@@ -16,7 +16,7 @@ Note: This is responsive CSS of the template.
 }
 
 @media (max-width:1199px) {
-.container { max-width: 100%; }
+/* .container { max-width: 100%; } */
 .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 12px;
     padding-left: 12x;
@@ -34,7 +34,7 @@ Note: This is responsive CSS of the template.
 
 /************************* 1024px *************************/
 @media (max-width:1099px) {
-.container { max-width: 100%; }
+/* .container { max-width: 100%; } */
 .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 12px;
     padding-left: 12x;
@@ -52,7 +52,7 @@ Note: This is responsive CSS of the template.
 
 /************************* 980px *************************/
 @media (max-width:1023px) {
-.container { max-width: 100%; }
+/* .container { max-width: 100%; } */
 .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 10px;
     padding-left: 10x;
@@ -100,7 +100,7 @@ Note: This is responsive CSS of the template.
 }
 
 @media only screen and (min-width:768px) and (max-width:999px) {
-.container { max-width: 100%; }
+/* .container { max-width: 100%; } */
 }
 @media (max-width:992px) {
 .text-center {
