--- a/src/responsive.css
+++ b/src/responsive.css
@@ -99,9 +99,6 @@ Note: This is responsive CSS of the template.
 }
 }
 
-@media only screen and (min-width:768px) and (max-width:999px) {
-/* .container { max-width: 100%; } */
-}
 @media (max-width:992px) {
 .text-center {
 text-align:center;	
@@ -402,6 +399,9 @@ text-align:center;
 	padding: 17px 0px;
 	text-align: left;
 }
+.recipe-item .overlay{
+    top: 60px;
+}
 .menu-btn {
 	padding: 17px 0px;
 	text-align:left;
@@ -640,6 +640,9 @@ text-align:center;
 
 /************************* 320px *************************/
 @media (max-width:479px) {
+.munch h1{
+    font-size: 25px;
+}
 .text-center {
 text-align:center;	
 }
